
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 scalar_t__ isprint (unsigned char) ;
 int printf (char*,...) ;

int dumpbuf(char *buff, int len)
{
 char line[17];
 int x;


 for(x=0;x<len;x++){
  if(!(x%16) && x){
   line[16] = 0;
   printf("\t%s\n", line);
  }
  printf("%02X ", (unsigned char)buff[x]);
  if(isprint((unsigned char)buff[x]))
   line[x%16]=buff[x];
  else
   line[x%16]='.';
 }
 printf("\n");
}
